Cambios para mostrar las herramientas usadas y un link al userlist

--- a/views/index.jade
+++ b/views/index.jade
@@ -1,12 +1,22 @@
 extend layout
 block content
-  h1 Welcome!
+  h1 Bienvenido!
   p.
-    Lorem ipsum dolor sit amet, jefeoiafoa  faoa ofaoano aofn aonfa aooeanaeojaf firfr rir ainra irnr aiar n
-    oojoijoijoijiojojojiojoi kni kn kjno  ojnoo oioioo
-  p.
-    edeao eoiije aoiene frfr ra afao air fri frr ia rfra ra raf ar frafrafafraf
-    rraf arfraf arfa frafra fra farfa fra
+    Bienvenido a la App Demo de Registro en Node.js. Esta app usa las siguientes herramientas:
+  ul.featurelist
+    li.
+      Jade Template engine
+    li.
+      Stylus CSS Generator
+    li.
+      Nib
+    li.
+      MongoDB
+    li.
+      Monk
+  div.userlistlink
+    p.
+      Para ver todos los usuarios registrados haga <a href="/userlist">click aquí</a>
 block sidebar
   .block
     h1 Right Sidebar
