--- a/views/index.jade
+++ b/views/index.jade
@@ -2,8 +2,10 @@ extend layout
 block content
   h1 Bienvenido!
   p.
-    Bienvenido a la App Demo de Registro en Node.js. Esta app usa las siguientes herramientas:
+    Bienvenido a la App Demo de Registro en Node.js. Esta app usa las siguientes herramientas/módulos:
   ul.featurelist
+    li.
+      Express Framework
     li.
       Jade Template engine
     li.
@@ -17,11 +19,4 @@ block content
   div.userlistlink
     p.
       Para ver todos los usuarios registrados haga <a href="/userlist">click aquí</a>
-block sidebar
-  .block
-    h1 Right Sidebar
-    p.
-      S edon ojeao orir riai airarnjri ir ianai ainri ifaiin ai ai ie
-    br.
-    .readmore
-      a(href="http://example.com") Read More
+      
