--- a/public/css/styles.styl
+++ b/public/css/styles.styl
@@ -21,8 +21,11 @@ body
   color #444
 
 h1
-  font-size:20px
-  line-height:1.8em
+  font-size 20px
+  line-height 1.8em
+
+a
+  color #666666
 
 header
   padding 20px 10px
@@ -33,7 +36,7 @@ header
 
 .container
   width 80%
-  margin:auto
+  margin auto
   overflow hidden
 
 .main-content
@@ -63,7 +66,7 @@ header
 
 
 p
-  line-height 1.8em
+  line-height 1.8
 
 .readmore
   float right
@@ -76,6 +79,54 @@ footer
   padding-top 5px
   text-align center
   margin-top 20px
+
+br
+  clear both
+
+ul.featurelist
+  margin-bottom 20px
+  display block
+  overflow auto;
+
+ul.featurelist li
+  line-height 2em 
+  border-bottom #cccccc 1px dotted
+  float left
+  width 200px
+
+form.addUser input
+  margin-bottom 15px
+  border 1px #cccccc solid
+  padding 5px
+  height 22px
+  width 95%
+  border-radius 5px
+
+form.addUser button
+  clear both
+  display block
+
+.userlistlink
+  clear both
+  padding 5px
+  background #cccccc
+  margin-bottom 20px
+  display block
+
+.userlistlink p
+  margin 0
+  padding 0
+
+th,tr,td
+  padding 5px
+
+tr
+  border-bottom 1px #cccccc dashed
+  display block
+
+td,th
+  width 100px
+  text-align left
 
 @media (max-width: 568px)
   header
@@ -95,6 +146,12 @@ footer
 
   .sidebar .block
     margin 0
+
+  ul.featurelist li
+    line-height 2em 
+    border-bottom #cccccc 1px dotted
+    float none
+    width 100%
 
   footer
     text-align center
